# event-booking-monorepo

./: .gitignore  docker-compose.yml
gateway/: package.json
gateway/src/: server.js
services/activity-service/: README.md  requirements.txt
services/activity-service/alembic/versions/: 0001_create_activities.py
services/activity-service/app/: main.py
services/activity-service/app/core/: auth.py  config.py
services/booking-service/: Dockerfile  requirements.in  requirements.txt
services/booking-service/alembic/: env.py
services/booking-service/app/: main.py
services/event-service/: Dockerfile  requirements.in  requirements.txt
services/event-service/app/: main.py
services/notification-service/: Dockerfile  README.md  requirements.txt
services/notification-service/app/: main.py
services/payment-service/: Dockerfile  README.md  requirements.in  requirements.txt
services/payment-service/alembic/: env.py
services/payment-service/app/: main.py
services/user-service/: Dockerfile  pyproject.toml
services/user-service/alembic/: env.py
services/user-service/alembic/versions/: 0001_create_users_and_profiles.py
services/user-service/app/: main.py
services/user-service/app/core/: config.py  database.py  deps.py  exceptions.py  security.py
services/user-service/app/models/: user.py
services/user-service/app/repository/: user.py
services/user-service/app/routes/: user.py
services/user-service/app/schemas/: user.py
services/user-service/app/services/: user.py
services/user-service/app/utils/: constants.py
(+47 files in other folders)
